# wxauto4

./: .gitignore  README.md  pyproject.toml
tools/: ws_mock_with_client.py
wxauto4/: __init__.py
wxauto4/bridge/: __init__.py  commands.py  main.py  serializer.py  ws_client.py
